# platform.framework.web.download-provider

./: .cproject  .gbs.conf  .project  AUTHORS  CMakeLists.txt  NOTICE  bi.sh  blog.txt  build.sh  build_mobile.sh  build_wareable.sh  download-provider-schema.sql  download-provider-service  download-provider-w.manifest  download-provider-w.manifest~  download-provider.manifest  download-provider.manifest~  download-provider.pc.in  download-provider.res  download-provider.res.in  download-provider.rule  dump-download-provider.sh  dump-download-provider.sh.in  gbs.conf  i.sh  init-DB.sh  org.download-provider.service.in  project.config  refresh.sh  refresh.sh~
agent/: CMakeLists.txt  download-agent-basic.c  download-agent-client-mgr.c  download-agent-debug.c  download-agent-dl-info-util.c  download-agent-dl-info.c  download-agent-dl-mgr.c  download-agent-encoding.c  download-agent-file.c  download-agent-http-mgr.c  download-agent-http-misc.c  download-agent-http-msg-handler.c  download-agent-http-queue.c  download-agent-interface.c  download-agent-mime-util.c  download-agent-plugin-conf.c  download-agent-plugin-drm.c  download-agent-plugin-libcurl.c  download-agent-plugin-libcurl.c~  download-agent-plugin-libsoup.c  download-agent-utils-dl-id-history.c  download-agent-utils.c
agent/include/: download-agent-basic.h  download-agent-client-mgr.h  download-agent-debug.h  download-agent-defs.h  download-agent-dl-info-util.h  download-agent-dl-info.h  download-agent-dl-mgr.h  download-agent-encoding.h  download-agent-file.h  download-agent-http-mgr.h  download-agent-http-misc.h  download-agent-http-msg-handler.h  download-agent-http-queue.h  download-agent-interface.h  download-agent-mime-util.h  download-agent-plugin-conf.h  download-agent-plugin-drm.h  download-agent-plugin-http-interface.h  download-agent-plugin-libcurl.h  download-agent-plugin-libsoup.h  download-agent-pthread.h  download-agent-type.h  download-agent-utils-dl-id-history.h  download-agent-utils.h
po/redwood/: CMakeLists.txt  bg.po  da.po  de.po  el_GR.po  es_ES.po  es_US.po  fi.po  hr.po  hu.po  hy.po  is.po  ka.po  kk.po  lt.po  lv.po  mn_MN.po  nb.po  pt_BR.po  sk.po  uk.po
provider/: CMakeLists.txt  download-provider-client-manager.c  download-provider-client.c  download-provider-cynara.c  download-provider-da-interface.c  download-provider-db.c  download-provider-ipc.c  download-provider-main.c  download-provider-network.c  download-provider-notification-manager.c  download-provider-notification.c  download-provider-notify.c  download-provider-plugin-download-agent.c  download-provider-pthread.c  download-provider-queue-manager.c  download-provider-queue.c  download-provider-request.c  download-provider-slots.c  download-provider-smack.c  download-provider-socket.c  download-provider-thread-queue.c  download-provider-thread-request.c  download-provider-utils.c
provider-interface/: CMakeLists.txt  download-provider-interface.c  download-provider-interface.pc.in
provider-interface/include/: download-provider-interface.h
provider/include/: download-provider-client-manager.h  download-provider-client.h  download-provider-config.h  download-provider-cynara.h  download-provider-da-interface.h  download-provider-db-defs.h  download-provider-db.h  download-provider-defs.h  download-provider-ipc.h  download-provider-log.h  download-provider-network.h  download-provider-notification-manager.h  download-provider-notification.h  download-provider-notify.h  download-provider-plugin-download-agent.h  download-provider-pthread.h  download-provider-queue-manager.h  download-provider-queue.h  download-provider-request.h  download-provider-slots.h  download-provider-smack.h  download-provider-socket.h  download-provider-utils.h  download-provider.h
src/: CMakeLists.txt  download-provider-da-interface.c  download-provider-dateTime.cpp  download-provider-db.c  download-provider-downloadItem.cpp  download-provider-downloadRequest.cpp  download-provider-event.cpp  download-provider-history-db.cpp  download-provider-ipc.c  download-provider-item.cpp  download-provider-items.cpp  download-provider-main.c  download-provider-network.cpp  download-provider-notification.c  download-provider-pid.c  download-provider-receiver.c  download-provider-request.c  download-provider-slots.c  download-provider-socket.c  download-provider-thread-queue.c  download-provider-thread-request.c  download-provider-util.cpp  download-provider-utils.c  download-provider-view.cpp  download-provider-viewItem.cpp  main.cpp
src/agent/: CMakeLists.txt  download-agent-basic.c  download-agent-client-mgr.c  download-agent-debug.c  download-agent-dl-info-util.c  download-agent-dl-mgr.c  download-agent-encoding.c  download-agent-file.c  download-agent-http-mgr.c  download-agent-http-misc.c  download-agent-http-msg-handler.c  download-agent-http-queue.c  download-agent-installation.c  download-agent-interface.c  download-agent-mime-util.c  download-agent-plugin-conf.c  download-agent-plugin-drm.c  download-agent-plugin-install.c  download-agent-plugin-libsoup.c  download-agent-utils-dl-id-history.c  download-agent-utils-dl-req-id-history.c  download-agent-utils.c
src/agent/include/: download-agent-basic.h  download-agent-client-mgr.h  download-agent-debug.h  download-agent-defs.h  download-agent-dl-info-util.h  download-agent-dl-mgr.h  download-agent-encoding.h  download-agent-file.h  download-agent-http-mgr.h  download-agent-http-misc.h  download-agent-http-msg-handler.h  download-agent-http-queue.h  (+12 more)
src/include/: download-provider-common.h  download-provider-da-interface.h  download-provider-dateTime.h  download-provider-db.h  download-provider-debug.h  download-provider-downloadItem.h  download-provider-downloadRequest.h  download-provider-event.h  download-provider-history-db.h  download-provider-item.h  download-provider-items.h  download-provider-log.h  download-provider-network.h  download-provider-notification.h  download-provider-request.h  download-provider-util.h  download-provider-view.h  download-provider-viewItem.h  download-provider.h
(+102 files in other folders)
