CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

MESSAGE("PROJECT : ${PKG_NAME}")

# DEFINES

SET(VERSION ${PKG_VERSION}-${PKG_RELEASE})
MESSAGE("VERSION : ${VERSION}")

IF(DEFINED SUPPORT_WIFI_DIRECT)
	MESSAGE("SUPPORT_WIFI_DIRECT: ${SUPPORT_WIFI_DIRECT}")
	IF(SUPPORT_WIFI_DIRECT)
		ADD_DEFINITIONS(-DSUPPORT_WIFI_DIRECT)
	ENDIF(SUPPORT_WIFI_DIRECT)
ENDIF(DEFINED SUPPORT_WIFI_DIRECT)

IF(DEFINED SUPPORT_LOG_MESSAGE)
	MESSAGE("SUPPORT_LOG_MESSAGE: ${SUPPORT_LOG_MESSAGE}")
	IF(SUPPORT_LOG_MESSAGE)
		ADD_DEFINITIONS(-DSUPPORT_LOG_MESSAGE)
	ENDIF(SUPPORT_LOG_MESSAGE)
ENDIF(DEFINED SUPPORT_LOG_MESSAGE)

IF(DEFINED SUPPORT_CHECK_IPC)
	MESSAGE("SUPPORT_CHECK_IPC: ${SUPPORT_CHECK_IPC}")
	IF(SUPPORT_CHECK_IPC)
		ADD_DEFINITIONS(-DSUPPORT_CHECK_IPC)
	ENDIF(SUPPORT_CHECK_IPC)
ENDIF(DEFINED SUPPORT_CHECK_IPC)

# BUILD

ADD_SUBDIRECTORY(agent)
ADD_SUBDIRECTORY(provider-interface)
ADD_SUBDIRECTORY(provider)
# i18n
ADD_SUBDIRECTORY(po)

# INSTALL

PROJECT(${PKG_NAME} C)
SET(PACKAGE_DESCRIPTION "Defines for ${PROJECT_NAME}")

CONFIGURE_FILE(download-provider.pc.in download-provider.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/download-provider.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)

INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/systemd/download-provider.service DESTINATION ${SYSTEMD_DIR})
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/systemd/download-provider.socket DESTINATION ${SYSTEMD_DIR})

INSTALL(FILES ${CMAKE_SOURCE_DIR}/download-provider-schema.sql DESTINATION ${DATABASE_SCHEMA_DIR})

# install images
INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/res/images/ DESTINATION ${IMAGE_DIR}
		FILES_MATCHING
		PATTERN "*.png"
		PATTERN "*.gif"
		)

IF(DEFINED LICENSE_DIR)
	CONFIGURE_FILE(LICENSE.APLv2 share/license/${PROJECT_NAME})
	INSTALL(FILES share/license/${PROJECT_NAME} DESTINATION ${LICENSE_DIR})
ENDIF(DEFINED LICENSE_DIR)


